(chores) camel-management: use unmodifiable list when possible